--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       </label>
       ...
       <button type="submit">Ajouter la tente</button>
-      <button type="button" onclick="window.open(sheetURL, '_blank')">Afficher toutes les tentes</button>
+      <button type="button" onclick="chargerDonnees()">Afficher toutes les tentes</button>
       <button type="button" onclick="reinitialiserListe()">Réinitialiser la liste</button>
     </form>
 
