ligne 70 Exporter toutes les tentes en CSV

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <body>
   <header>
     <h1>Inventaire des Tentes</h1>
-    <button onclick="ouvrirOngletInventaire()">Afficher toutes les tentes</button>
+    <button onclick="ouvrirOngletInventaire()">Exporter toutes les tentes en CSV </button>
   </header>
   <div class="container">
     <form class="form-section" onsubmit="event.preventDefault(); ajouterTente();">
