Afficher l'inventaire tente</button> ligne 146

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       </label>
 
       <button type="submit">Ajouter la tente</button>
-      <button type="button" onclick="chargerDonnees()">Afficher la tente</button>
+      <button type="button" onclick="chargerDonnees()">Afficher l'inventaire tente</button>
     </form>
 
     <!-- Résultats -->
