--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Inventaire gggg Tentes</title>
+  <title>Inventaire oooo Tentes</title>
   <style>
     body {
       font-family: Arial, sans-serif;
