--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-<!-- ESSAI 9h16 deplacement bouton  et deplac formulaire reuslktatat inventaire-->
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Inventaire Tentes</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Inventaire des Tentes</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -32,7 +31,7 @@
       display: block;
       margin-top: 10px;
     }
-    select, input[type="text"], input[type="number"], textarea {
+    select, input[type="text"], input[type="number"], input[type="date"], textarea {
       width: 100%;
       padding: 0.5em;
       margin-top: 5px;
@@ -68,12 +67,10 @@
 <body>
   <header>
     <h1>Inventaire des Tentes</h1>
-    <button type="button" onclick="chargerDonnees()">Afficher l'inventaire tente</button>
-    <button onclick="ouvrirOngletInventaire()">Exporter toutes les tentes en CSV </button>
-   
+    <button type="button" onclick="chargerDonnees()">Afficher l'inventaire des tentes</button>
+    <button onclick="ouvrirOngletInventaire()">Exporter toutes les tentes en CSV</button>
   </header>
   <div class="container">
-  <!-- Résultats -->
     <div id="listeTentesContainer">
       <h2>Tentes enregistrées</h2>
       <div id="listeTentes"></div>
@@ -82,247 +79,173 @@
 
   <h2>Comment ajouter une nouvelle tente</h2>
 
-      <form class="form-section" onsubmit="event.preventDefault(); ajouterTente();">
-      <label>Numéro de la tente:
-        <input type="text" id="nom" required>
-      </label>
-      <label>Dernier utilisateur:
-        <input type="text" id="utilisateur" required>
-      </label>
+  <form class="form-section" onsubmit="event.preventDefault(); ajouterTente();">
+    <label>Date de contrôle:
+      <input type="date" id="dateControle" required>
+    </label>
+    <label>Numéro de la tente:
+      <input type="text" id="nom" required>
+    </label>
+    <label>Nombre de places:
+      <input type="number" id="nbPlaces" required>
+    </label>
+    <label>Date d'achat:
+      <input type="date" id="dateAchat">
+    </label>
+    <label>Dernier utilisateur:
+      <input type="text" id="utilisateur" required>
+    </label>
 
-      <h3>Double toit</h3>
-      <label>Présent:
-        <select id="doubleToit-present" required>
-          <option value="">-- Sélectionner --</option>
-          <option value="oui">Oui</option>
-          <option value="non">Non</option>
-        </select>
-      </label>
-      <label>Endommagé:
-        <select id="doubleToit-endommage">
-          <option value="non">Non</option>
-          <option value="oui">Oui</option>
-        </select>
-      </label>
-      <label>Remarque:
-        <input type="text" id="doubleToit-remarque">
-      </label>
+    <h3>Double toit</h3>
+    <label>Présent:
+      <select id="doubleToit-present" required>
+        <option value="">-- Sélectionner --</option>
+        <option value="oui">Oui</option>
+        <option value="non">Non</option>
+      </select>
+    </label>
+    <label>Endommagé:
+      <select id="doubleToit-endommage">
+        <option value="non">Non</option>
+        <option value="oui">Oui</option>
+      </select>
+    </label>
+    <label>Remarque:
+      <input type="text" id="doubleToit-remarque">
+    </label>
 
-      <h3>Toit</h3>
-      <label>Présent:
-        <select id="toit-present" required>
-          <option value="">-- Sélectionner --</option>
-          <option value="oui">Oui</option>
-          <option value="non">Non</option>
-        </select>
-      </label>
-      <label>Endommagé:
-        <select id="toit-endommage">
-          <option value="non">Non</option>
-          <option value="oui">Oui</option>
-        </select>
-      </label>
-      <label>Remarque:
-        <input type="text" id="toit-remarque">
-      </label>
+    <h3>Toit</h3>
+    <label>Présent:
+      <select id="toit-present" required>
+        <option value="">-- Sélectionner --</option>
+        <option value="oui">Oui</option>
+        <option value="non">Non</option>
+      </select>
+    </label>
+    <label>Endommagé:
+      <select id="toit-endommage">
+        <option value="non">Non</option>
+        <option value="oui">Oui</option>
+      </select>
+    </label>
+    <label>Remarque:
+      <input type="text" id="toit-remarque">
+    </label>
 
-      <h3>Tapis de sol</h3>
-      <label>Présent:
-        <select id="tapis-present">
-          <option value="oui">Oui</option>
-          <option value="non">Non</option>
-        </select>
-      </label>
-      <label>Endommagé:
-        <select id="tapis-endommage">
-          <option value="non">Non</option>
-          <option value="oui">Oui</option>
-        </select>
-      </label>
-      <label>Remarque:
-        <input type="text" id="tapis-remarque">
-      </label>
+    <h3>Tapis de sol</h3>
+    <label>Présent:
+      <select id="tapis-present">
+        <option value="oui">Oui</option>
+        <option value="non">Non</option>
+      </select>
+    </label>
+    <label>Endommagé:
+      <select id="tapis-endommage">
+        <option value="non">Non</option>
+        <option value="oui">Oui</option>
+      </select>
+    </label>
+    <label>Remarque:
+      <input type="text" id="tapis-remarque">
+    </label>
 
-      <label>Piquets complets ?
-        <select id="piquets">
-          <option value="oui">Oui</option>
-          <option value="non">Non</option>
-        </select>
-      </label>
+    <label>Piquets complets ?
+      <select id="piquets">
+        <option value="oui">Oui</option>
+        <option value="non">Non</option>
+      </select>
+    </label>
 
-      <label>Nombre de sardines:
-        <input type="number" id="sardines" required>
-      </label>
+    <label>Nombre de sardines:
+      <input type="number" id="sardines" required>
+    </label>
 
-      <label>Nombre de maquereaux:
-        <input type="number" id="maquereaux" required>
-      </label>
+    <label>Nombre de maquereaux:
+      <input type="number" id="maquereaux" required>
+    </label>
 
-      <label>Nombre de bananes:
-        <input type="number" id="bananes" required>
-      </label>
+    <label>Nombre de bananes:
+      <input type="number" id="bananes" required>
+    </label>
 
-      <label>Maillet présent ?
-        <select id="maille" required>
-          <option value="">-- Sélectionner --</option>
-          <option value="oui">Oui</option>
-          <option value="non">Non</option>
-        </select>
-      </label>
+    <label>Maillet présent ?
+      <select id="maille" required>
+        <option value="">-- Sélectionner --</option>
+        <option value="oui">Oui</option>
+        <option value="non">Non</option>
+      </select>
+    </label>
 
-      <label>Remarques:
-        <textarea id="remarques"></textarea>
-      </label>
+    <label>Observation : travaux à faire:
+      <textarea id="observationTravaux"></textarea>
+    </label>
 
-      <button type="submit">Ajouter la tente</button>
-      
-    </form>
+    <label>Travaux réalisés:
+      <textarea id="travauxRealises"></textarea>
+    </label>
 
+    <label>Dernière utilisation:
+      <input type="date" id="derniereUtilisation">
+    </label>
 
+    <label>Remarques globales:
+      <textarea id="remarquesGlobales"></textarea>
+    </label>
 
+    <button type="submit">Ajouter la tente</button>
+  </form>
 
   <script>
     const scriptURL = "https://script.google.com/macros/s/AKfycbzDWGH3TrZZM3BJsWcT-n8FYMODIMWBbPyMU1pUxf4dD5O3Ly_Q3NpOFLT7UMrolNnl/exec";
     const sheetURL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vQwnYaQe1NxhepYNTBeF3Hvn-nwko3mqCfVSOZZxUvRFSBAxL8w84y1igO29g23g3GmrXmO7xtuRpKo/pub?output=csv";
 
-function ajouterTente() {
-  const requiredFields = ['nom', 'utilisateur', 'doubleToit-present', 'toit-present', 'sardines', 'maquereaux', 'bananes', 'maille'];
-  let valid = true;
+    function ajouterTente() {
+      const requiredFields = ['dateControle', 'nom', 'nbPlaces', 'utilisateur', 'doubleToit-present', 'toit-present', 'sardines', 'maquereaux', 'bananes', 'maille'];
+      let valid = true;
 
-  for (const id of requiredFields) {
-    const el = document.getElementById(id);
-    if (!el.value) {
-      el.classList.add("error");
-      valid = false;
-    } else {
-      el.classList.remove("error");
-    }
-  }
+      for (const id of requiredFields) {
+        const el = document.getElementById(id);
+        if (!el.value) {
+          el.classList.add("error");
+          valid = false;
+        } else {
+          el.classList.remove("error");
+        }
+      }
 
-  if (!valid) {
-    alert("Veuillez remplir tous les champs obligatoires.");
-    return;
-  }
+      if (!valid) {
+        alert("Veuillez remplir tous les champs obligatoires.");
+        return;
+      }
 
-  const tente = {
-    dateControle: document.getElementById('dateControle').value,
-    nom: document.getElementById('nom').value,
-    nbPlaces: document.getElementById('nbPlaces').value,
-    dateAchat: document.getElementById('dateAchat').value,
-    utilisateur: document.getElementById('utilisateur').value,
-    doubleToit: {
-      present: document.getElementById('doubleToit-present').value,
-      endommage: document.getElementById('doubleToit-endommage').value,
-      remarque: document.getElementById('doubleToit-remarque').value,
-    },
-    toit: {
-      present: document.getElementById('toit-present').value,
-      endommage: document.getElementById('toit-endommage').value,
-      remarque: document.getElementById('toit-remarque').value,
-    },
-    tapis: {
-      present: document.getElementById('tapis-present').value,
-      endommage: document.getElementById('tapis-endommage').value,
-      remarque: document.getElementById('tapis-remarque').value,
-    },
-    piquets: document.getElementById('piquets').value,
-    sardines: document.getElementById('sardines').value,
-    maquereaux: document.getElementById('maquereaux').value,
-    bananes: document.getElementById('bananes').value,
-    maille: document.getElementById('maille').value,
-    observationTravaux: document.getElementById('observationTravaux').value,
-    travauxRealises: document.getElementById('travauxRealises').value,
-    derniereUtilisation: document.getElementById('derniereUtilisation').value,
-    remarquesGlobales: document.getElementById('remarquesGlobales').value,
-    date: new Date().toISOString()
-  };
+      const tente = {
+        "Date controle": document.getElementById('dateControle').value,
+        "Numéro tente": document.getElementById('nom').value,
+        "Nb places": document.getElementById('nbPlaces').value,
+        "Date achat": document.getElementById('dateAchat').value,
+        "Utilisateur": document.getElementById('utilisateur').value,
+        "Double toit - Présent": document.getElementById('doubleToit-present').value,
+        "Double toit - Endommagé": document.getElementById('doubleToit-endommage').value,
+        "Double toit - Remarque": document.getElementById('doubleToit-remarque').value,
+        "Toit - Présent": document.getElementById('toit-present').value,
+        "Toit - Endommagé": document.getElementById('toit-endommage').value,
+        "Toit - Remarque": document.getElementById('toit-remarque').value,
+        "Tapis - Présent": document.getElementById('tapis-present').value,
+        "Tapis - Endommagé": document.getElementById('tapis-endommage').value,
+        "Tapis - Remarque": document.getElementById('tapis-remarque').value,
+        "Piquets complets": document.getElementById('piquets').value,
+        "Sardines": document.getElementById('sardines').value,
+        "Maquereaux": document.getElementById('maquereaux').value,
+        "Bananes": document.getElementById('bananes').value,
+        "Maillet présent": document.getElementById('maille').value,
+        "Observation : travaux à faire": document.getElementById('observationTravaux').value,
+        "Travaux réalisées": document.getElementById('travauxRealises').value,
+        "derniere Utilisation": document.getElementById('derniereUtilisation').value,
+        "Remarques gloable": document.getElementById('remarquesGlobales').value
+      };
 
-  fetch(scriptURL, {
-    method: "POST",
-    mode: "no-cors",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify(tente)
-  }).then(() => {
-    alert("Tente ajoutée avec succès !");
-    document.querySelector('form.form-section').reset();
-    chargerDonnees();
-  });
-}
-
-
-    function afficherTente(tente) {
-      const liste = document.getElementById('listeTentes');
-      const div = document.createElement('div');
-      div.className = 'tent-entry';
-      div.innerHTML = `
-        <strong>Tente #${tente.nom}</strong><br>
-        Dernier utilisateur : ${tente.utilisateur} <br>
-        <div class="equipment-item"><strong>Double toit</strong>: ${tente.doubleToit.present} / Endommagé: ${tente.doubleToit.endommage} (${tente.doubleToit.remarque})</div>
-        <div class="equipment-item"><strong>Toit</strong>: ${tente.toit.present} / Endommagé: ${tente.toit.endommage} (${tente.toit.remarque})</div>
-        <div class="equipment-item"><strong>Tapis</strong>: ${tente.tapis.present} / Endommagé: ${tente.tapis.endommage} (${tente.tapis.remarque})</div>
-        <div class="equipment-item"><strong>Piquets complets:</strong> ${tente.piquets}</div>
-        <div class="equipment-item"><strong>Sardines:</strong> ${tente.sardines}</div>
-        <div class="equipment-item"><strong>Maquereaux:</strong> ${tente.maquereaux}</div>
-        <div class="equipment-item"><strong>Bananes:</strong> ${tente.bananes}</div>
-        <div class="equipment-item"><strong>Maillet présent:</strong> ${tente.maille}</div>
-        <div class="equipment-item"><strong>Remarques:</strong> ${tente.remarques}</div>
-        <div class="equipment-item"><strong>Date d'ajout:</strong> ${new Date(tente.date).toLocaleString('fr-FR')}</div>
-      `;
-      liste.appendChild(div);
-    }
-    
-<!-- fonctionnel avec les nouvelles colonnes-->
-    function chargerDonnees() {
-  fetch(sheetURL)
-    .then(response => response.text())
-    .then(text => {
-      const rows = text.trim().split('\n');
-      const liste = document.getElementById('listeTentes');
-      liste.innerHTML = '';
-
-      rows.slice(1).forEach(row => {
-        const cols = row.split(',');
-        const tente = {
-          dateControle: cols[0],
-          nom: cols[1],
-          nbPlaces: cols[2],
-          dateAchat: cols[3],
-          utilisateur: cols[4],
-          doubleToit: {
-            present: cols[5],
-            endommage: cols[6],
-            remarque: cols[7],
-          },
-          toit: {
-            present: cols[8],
-            endommage: cols[9],
-            remarque: cols[10],
-          },
-          tapis: {
-            present: cols[11],
-            endommage: cols[12],
-            remarque: cols[13],
-          },
-          piquets: cols[14],
-          sardines: cols[15],
-          maquereaux: cols[16],
-          bananes: cols[17],
-          maille: cols[18],
-          observationTravaux: cols[19],
-          travauxRealises: cols[20],
-          derniereUtilisation: cols[21],
-          remarquesGlobales: cols[22],
-        };
-        afficherTente(tente);
-      });
-
-      document.getElementById('listeTentesContainer').scrollIntoView({ behavior: 'smooth' });
-    });
-}
-
-    function ouvrirOngletInventaire() {
-      window.open(sheetURL, '_blank');
-    }
-  </script>
-</body>
-</html>
+      fetch(scriptURL, {
+        method: "POST",
+        mode
+::contentReference[oaicite:7]{index=7}
+ 
